--- a/TestSignalR/Views/Home/Index.cshtml
+++ b/TestSignalR/Views/Home/Index.cshtml
@@ -2,7 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div id="messages"></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.9/signalr.min.js"></script>
+<script>
+    const connection = new signalR.HubConnectionBuilder()
+        .withUrl("/servicebushub") // Use the lowercase URL here as well
+        .build();
+
+    connection.on("ReceiveMessage", (message) => {
+        const messages = document.getElementById("messages");
+        const listItem = document.createElement("li");
+        listItem.textContent = message;
+        messages.appendChild(listItem);
+    });
+
+    connection.start().catch((err) => console.error(err.toString()));
+</script>
